[gd_scene load_steps=15 format=3 uid="uid://bb0y3mal68jxi"]

[ext_resource type="Script" uid="uid://b7eubamrigr17" path="res://world.gd" id="1_f3sb7"]
[ext_resource type="PackedScene" uid="uid://b6cnit3gmsgj6" path="res://gun/gun.tscn" id="2_fj7yv"]
[ext_resource type="Script" uid="uid://d0s6axdysyavm" path="res://player/hand/hand.gd" id="2_tlwt5"]
[ext_resource type="PackedScene" uid="uid://cn0u235ioppyo" path="res://environment/grabbable_box.tscn" id="3_036b0"]
[ext_resource type="Script" uid="uid://b7tnbcufs3h13" path="res://player/player_xr_nodes.gd" id="5_pkg7o"]
[ext_resource type="PackedScene" uid="uid://bc4ibtotqet1h" path="res://environment/grabbable_bat/grabbable_bat.tscn.tscn" id="6_dwbse"]
[ext_resource type="PackedScene" uid="uid://b7aho2vyb6fhs" path="res://player/player.tscn" id="7_pkg7o"]
[ext_resource type="PackedScene" uid="uid://nffs1pme33la" path="res://environment/table/table.tscn" id="8_gbfbk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f3sb7"]

[sub_resource type="Sky" id="Sky_fj7yv"]
sky_material = SubResource("ProceduralSkyMaterial_f3sb7")

[sub_resource type="Environment" id="Environment_tlwt5"]
background_mode = 2
sky = SubResource("Sky_fj7yv")

[sub_resource type="BoxMesh" id="BoxMesh_fj7yv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fj7yv"]
size = Vector3(7.438904, 0.5876465, 8.19873)

[sub_resource type="SphereShape3D" id="SphereShape3D_aqk2v"]
radius = 0.052785624

[node name="Node3D" type="Node3D"]
script = ExtResource("1_f3sb7")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_tlwt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.87957114, -0.35945436, 0.3116844, 0, 0.6551194, 0.7555254, -0.47576737, -0.6645384, 0.5762241, 0.23954391, 3.421152, 2.1846008)
shadow_enabled = true
shadow_blur = 0.5

[node name="Objects" type="Node3D" parent="."]

[node name="LeftGun" parent="Objects" instance=ExtResource("2_fj7yv")]
transform = Transform3D(-0.025, 0, -3.774895e-09, 0, 0.025, 0, 3.774895e-09, 0, -0.025, -0.5, 1, 0.022342145)

[node name="RightGun" parent="Objects" instance=ExtResource("2_fj7yv")]
transform = Transform3D(-0.025, 0, -3.774895e-09, 0, 0.025, 0, 3.774895e-09, 0, -0.025, 0.5, 1, 0.05583626)

[node name="SmallBox" parent="Objects" instance=ExtResource("3_036b0")]
transform = Transform3D(-0.97437, 0, -0.2249511, 0, 1, 0, 0.2249511, 0, -0.97437, -0.003091544, 2.2291927, 1.1267729)

[node name="BigBox" parent="Objects" instance=ExtResource("3_036b0")]
transform = Transform3D(-1.9487401, 0, -0.44990224, 0, 2.0000002, 0, 0.44990224, 0, -1.9487401, -0.003091544, 1.310499, 1.1267729)
dont_rescale = false

[node name="Floor" type="StaticBody3D" parent="Objects"]
collision_layer = 3
collision_mask = 3

[node name="Floor" type="MeshInstance3D" parent="Objects/Floor"]
transform = Transform3D(7.4627213, 0, 0, 0, 0.15729135, 0, 0, 0, 8.17567, 0, 0, 0)
mesh = SubResource("BoxMesh_fj7yv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Objects/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.040863037, -0.20617676, -0.013916016)
shape = SubResource("BoxShape3D_fj7yv")

[node name="GrabbableBat" parent="Objects" instance=ExtResource("6_dwbse")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18394154, 1.5663196, -0.98309994)

[node name="XROrigin" type="XROrigin3D" parent="." node_paths=PackedStringArray("camera", "left_hand", "right_hand")]
script = ExtResource("5_pkg7o")
camera = NodePath("Camera")
left_hand = NodePath("LeftHand")
right_hand = NodePath("RightHand")

[node name="Camera" type="XRCamera3D" parent="XROrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftHand" type="XRController3D" parent="XROrigin" node_paths=PackedStringArray("hand_object", "hand_grab_point", "local_object_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
pose = &"aim"
script = ExtResource("2_tlwt5")
hand_object = NodePath("../../Player/LeftHandObject")
hand_grab_point = NodePath("HandGrabPoint")
local_object_point = NodePath("LocalObjectPosition")
is_left_hand = true

[node name="ObjectDetection" type="Area3D" parent="XROrigin/LeftHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.023865104, 0.03360948)

[node name="Collision" type="CollisionShape3D" parent="XROrigin/LeftHand/ObjectDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03684786, 0, 0)
shape = SubResource("SphereShape3D_aqk2v")
debug_color = Color(0.8980392, 0.28627452, 0.36862746, 0.41960785)

[node name="HandGrabPoint" type="Marker3D" parent="XROrigin/LeftHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.017265618, -0.016591668, 0.046322405)
gizmo_extents = 0.05

[node name="LocalObjectPosition" type="Marker3D" parent="XROrigin/LeftHand"]
gizmo_extents = 0.01

[node name="RightHand" type="XRController3D" parent="XROrigin" node_paths=PackedStringArray("hand_object", "hand_grab_point", "local_object_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
pose = &"aim"
show_when_tracked = true
script = ExtResource("2_tlwt5")
hand_object = NodePath("../../Player/RightHandObject")
hand_grab_point = NodePath("HandGrabPoint")
local_object_point = NodePath("LocalObjectPosition")

[node name="ObjectDetection" type="Area3D" parent="XROrigin/RightHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.023865104, 0.03360948)

[node name="Collision" type="CollisionShape3D" parent="XROrigin/RightHand/ObjectDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0368479, 0, 0)
shape = SubResource("SphereShape3D_aqk2v")
debug_color = Color(0.8980392, 0.28627452, 0.36862746, 0.41960785)

[node name="HandGrabPoint" type="Marker3D" parent="XROrigin/RightHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.003545612, -0.016591728, 0.046322405)
gizmo_extents = 0.05

[node name="LocalObjectPosition" type="Marker3D" parent="XROrigin/RightHand"]
gizmo_extents = 0.01

[node name="Player" parent="." node_paths=PackedStringArray("player_xr_nodes") instance=ExtResource("7_pkg7o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.057310462, 0)
player_xr_nodes = NodePath("../XROrigin")

[node name="Table" parent="." instance=ExtResource("8_gbfbk")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.06254241, 0.9033084, -2.112905)
mass = 75.0

[connection signal="button_pressed" from="XROrigin/LeftHand" to="XROrigin/LeftHand" method="_on_button_pressed"]
[connection signal="area_entered" from="XROrigin/LeftHand/ObjectDetection" to="XROrigin/LeftHand" method="_on_object_detection_area_entered"]
[connection signal="area_exited" from="XROrigin/LeftHand/ObjectDetection" to="XROrigin/LeftHand" method="_on_object_detection_area_exited"]
[connection signal="button_pressed" from="XROrigin/RightHand" to="XROrigin/RightHand" method="_on_button_pressed"]
[connection signal="area_entered" from="XROrigin/RightHand/ObjectDetection" to="XROrigin/RightHand" method="_on_object_detection_area_entered"]
[connection signal="area_exited" from="XROrigin/RightHand/ObjectDetection" to="XROrigin/RightHand" method="_on_object_detection_area_exited"]

[editable path="Player"]
